WIP: MISP conversion

--- a/colander_data_converter/converters/misp/data/detection_rule_misp_mapping.json
+++ b/colander_data_converter/converters/misp/data/detection_rule_misp_mapping.json
@@ -3,32 +3,24 @@
     "colander_type": "YARA",
     "misp_object": "yara",
     "misp_definition": "https://github.com/MISP/misp-objects/blob/main/objects/yara/definition.json",
-    "misp_colander_mapping": {
-      "discriminator": {
-        "type": "field",
-        "field": "yara"
-      }
-    },
+    "misp_colander_mapping": {},
     "colander_misp_mapping": {
       "name": "yara-rule-name",
-      "content": "yara",
-      "additional_attributes": {}
+      "misp_attributes": {
+        "content": "yara"
+      }
     }
   },
   {
     "colander_type": "SURICATA",
     "misp_object": "suricata",
     "misp_definition": "https://github.com/MISP/misp-objects/blob/main/objects/suricata/definition.json",
-    "misp_colander_mapping": {
-      "discriminator": {
-        "type": "field",
-        "field": "suricata"
-      }
-    },
+    "misp_colander_mapping": {},
     "colander_misp_mapping": {
       "name": "comment",
-      "content": "suricata",
-      "additional_attributes": {}
+      "misp_attributes": {
+        "content": "suricata"
+      }
     }
   }
 ]
