--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ test = [
   "pytest",
   "pytest-cov",
   "pytest-md-report",
+  "sphinx>=8.1.3",
 ]
 
 docs = [
@@ -118,11 +119,13 @@ ignore-words-list = "ot,master"
 [tool.coverage.run]
 omit = [
   "*test_*",
+  "docs/*",
 ]
 
 [tool.coverage.report]
 omit = [
   "tests/*",
+  "docs/*",
 ]
 
 [tool.mypy]
