--- a/tox.ini
+++ b/tox.ini
@@ -51,6 +51,7 @@ dependency_groups =
     test
 commands =
     python generate_types.py
+    python generate_conversion_matrix.py
     ruff format
     pre-commit run --all-files
 
