WIP: MISP conversion

--- a/tox.ini
+++ b/tox.ini
@@ -14,8 +14,10 @@ description = run the unit tests with pytest under {base_python}
 usedevelop = true
 dependency_groups =
     test
-allowlist_externals = bash
+allowlist_externals =
+    bash
 commands =
+    bash -c "cp -r colander_data_converter/converters/misp/definitions/* ${VIRTUAL_ENV}/lib/python3.*/site-packages/pymisp/data/misp-objects/objects/"
     coverage run -m pytest --doctest-modules --md-report --md-report-verbose=0 --md-report-output test-report.md
     bash -c "coverage report --format=markdown | tee test-coverage.md"
 
@@ -50,6 +52,7 @@ dependency_groups =
     dev
     test
 commands =
+    python export_theme_icons.py
     python generate_types.py
     python generate_conversion_matrix.py
     ruff format
